--- a/OOT_PZ_Kursevi/OOT_PZ_Kursevi/OOT_PZ_Kursevi.csproj
+++ b/OOT_PZ_Kursevi/OOT_PZ_Kursevi/OOT_PZ_Kursevi.csproj
@@ -9,6 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Update="datoteke\kategorije.dat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="datoteke\kursevi.dat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="photos\noIcon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
